--- a/admin/.env
+++ b/admin/.env
@@ -1,2 +1,2 @@
 VITE_CURRENCY = '₹'
-VITE_BACKEND_URL = 'http://localhost:4000'
+VITE_BACKEND_URL = 'https://docbook-doctor-appointment-booking-system.onrender.com'
