--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,8 @@ JWT_SECRET="greatstack"
 ADMIN_EMAIL = "admin@example.com"
 ADMIN_PASSWORD = "greatstack123"
 
+frontend_url = 'https://docbook-doctor-appointment-booking.onrender.com'
+
 # MongoDB Setup ( required )
 MONGODB_URI=mongodb+srv://hironmoypal7:Hironmoy2003@cluster0.qkabvsg.mongodb.net/
 
